<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupFragment">

    <EditText
        android:id="@+id/personName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="@string/your_name_hint"
        app:layout_constraintBottom_toTopOf="@+id/phonenum"
        app:layout_constraintEnd_toEndOf="@+id/paswd"
        app:layout_constraintStart_toStartOf="@+id/paswd"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phonenum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"


        android:ems="10"
        android:hint="@string/phone_hint"
        app:layout_constraintBottom_toTopOf="@+id/emailadd"
        app:layout_constraintStart_toStartOf="@+id/personName"
        app:layout_constraintTop_toBottomOf="@+id/personName" />

    <EditText
        android:id="@+id/emailadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="7dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/email_hint"
        app:layout_constraintBottom_toTopOf="@+id/paswd"
        app:layout_constraintStart_toStartOf="@+id/paswd"
        app:layout_constraintTop_toBottomOf="@+id/phonenum" />

    <EditText
        android:id="@+id/paswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="75dp"
        android:layout_marginBottom="59dp"
        android:ems="10"
        android:hint="@string/password_hint"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailadd" />

    <Button
        android:id="@+id/signup_btn_signingup"
        android:layout_width="201dp"
        android:layout_height="57dp"

        android:layout_marginStart="75dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/green_material"
        android:text="@string/sign_up"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/space2"
        app:layout_constraintStart_toStartOf="@+id/space2"
        app:layout_constraintTop_toBottomOf="@+id/paswd" />

    <Space
        android:id="@+id/space2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>