<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.drawer.BookingFragment">

    <Button
        android:id="@+id/pay_master_btn"
        android:layout_width="226dp"
        android:layout_height="0dp"
        android:backgroundTint="#D50000"
        android:text="Pay with MasterCard"
        android:textColor="#FFFFFF"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/space3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pay_visa_btn" />

    <Button
        android:id="@+id/pay_visa_btn"
        android:layout_width="219dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="#313232"
        android:text="Debit or Credit Visa"
        android:textColor="#FFFFFF"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/pay_master_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pay_paypal_btn" />

    <ImageView
        android:id="@+id/trainerImage"
        android:layout_width="240dp"
        android:layout_height="0dp"

        android:layout_marginTop="66dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_running_24"
        app:layout_constraintBottom_toTopOf="@+id/trainer_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/trainer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/example_txt_home"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/about_trainer"
        app:layout_constraintEnd_toEndOf="@+id/trainerImage"
        app:layout_constraintStart_toStartOf="@+id/trainerImage"
        app:layout_constraintTop_toBottomOf="@+id/trainerImage" />

    <TextView
        android:id="@+id/about_trainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="21dp"
        android:text="@string/example_str_home"
        app:layout_constraintBottom_toTopOf="@+id/date_btn"
        app:layout_constraintStart_toStartOf="@+id/date_btn"
        app:layout_constraintTop_toBottomOf="@+id/trainer_name" />

    <Button
        android:id="@+id/date_btn"
        android:layout_width="231dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/date_lbl"
        android:textColor="#000000"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/time_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_trainer" />

    <Button
        android:id="@+id/time_btn"
        android:layout_width="229dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/time_lbl"
        android:textColor="#000000"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/pay_paypal_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_btn" />

    <Button
        android:id="@+id/pay_paypal_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#039BE5"
        android:text="@string/pay_with_paypal"
        android:textColor="#FFFFFF"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/pay_visa_btn"
        app:layout_constraintEnd_toEndOf="@+id/pay_visa_btn"
        app:layout_constraintStart_toStartOf="@+id/pay_visa_btn"
        app:layout_constraintTop_toBottomOf="@+id/time_btn" />

    <Space
        android:id="@+id/space3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pay_master_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>